src/objects/Transaction_Type__c.object
<CustomObject>
    <fields>
        <fullName>Code__c</fullName>
        <externalId>true</externalId>
        <label>Code</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Description__c</fullName>
        <label>External Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <externalId>true</externalId>
        <label>ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Origin_Code__c</fullName>
        <label>Origin Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payor_Type__c</fullName>
        <label>Payor Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unmapped__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unmapped</label>
        <type>Checkbox</type>
    </fields>
    <label>Transaction Type</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transaction Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>